fix: Otimização das Queries, Alteração no DTO de Token, Adicionado Semana Par e Impar